--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -6,7 +6,17 @@
   min-height: 100vh;
   overflow-y: scroll;
   padding: var(--space-sm);
-  width: 225px;
+  scrollbar-color: var(--primary) rgba(0, 0, 0, 0);
+  scrollbar-width: thin;
+  width: 250px;
+}
+
+.drawer::-webkit-scrollbar {
+  width: 5px;
+}
+
+.drawer:hover.drawer::-webkit-scrollbar-thumb {
+  background: var(--primary);
 }
 
 .drawerHeader {
